--- a/style.css
+++ b/style.css
@@ -8,10 +8,6 @@ body {
   font-family: sans-serif;
 }
 
-/* .inl-bk {
-  display: inline-block;
-} */
-
 .nav {
   margin-bottom: 50px;
 }
@@ -21,20 +17,24 @@ body {
   font-size: 0;
 }
 
-.nav-list>.nav-item:first-child {
-  border-left: 2px solid #3c805b;
-}
-
 .nav-item {
   display: inline-block;
 
   background-color: #47986d;
   border: 2px solid #3c805b;
-  border-left: 0px;
 
   font-size: 17px;
 
   position: relative;
+}
+
+.nav-item:hover {
+  background-color: #3c805b;
+}
+
+/* Убрать суммирование бордеров, 2px вместо 4px */
+.marg-left {
+  margin-left: -2px;
 }
 
 .nav-link {
@@ -44,10 +44,8 @@ body {
   color: inherit;
 
   padding: 20px 50px;
-}
 
-.nav-item:hover {
-  background-color: #3c805b;
+  width: 100%;
 }
 
 .sub-nav-list {
@@ -55,8 +53,12 @@ body {
 
   position: absolute;
   top: 100%;
-  left: 0;
-  right: 0;
+  left: 0px;
+  right: 0px;
+
+  /* Сровнять ширину пункта меню и его выпадающего элемента */
+  margin-left: -2px;
+  margin-right: -2px;
 }
 
 .nav-item:hover > .sub-nav-list {
@@ -65,16 +67,13 @@ body {
 
 .sub-nav-item {
   display: block;
-  
+
   text-align: center;
-
-  border: 2px solid #3c805b;
-
-  position: relative;
 }
 
-.sub-nav-link {
-  width: 100%;
+/* Убрать суммирование бордеров, 2px вместо 4px */
+.marg-top {
+  margin-top: -2px;
 }
 
 .second-nav-list {
@@ -84,6 +83,10 @@ body {
 
   top: -2px;
   left: 100%;
+}
+
+.second-nav-item {
+  width: 100%;
 }
 
 .sub-nav-item:hover > .second-nav-list {
